--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tiger Wrestling Club | North Allegheny, PA</title>
-  <meta name="description" content="Tiger Wrestling Club — youth wrestling for boys and girls affiliated with North Allegheny Senior High School in Wexford, PA." />
+  <title>Tiger Wrestling Club | Wexford, PA</title>
+  <meta name="description" content="Tiger Wrestling Club — Premier wrestling for boys and girls affiliated with North Allegheny Senior High School in Wexford, PA." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet" />
@@ -16,9 +16,7 @@
   <header class="nav-header" id="nav">
     <div class="nav-inner">
       <a href="#home" class="nav-logo">
-        <span class="logo-tiger">TIGER</span>
-        <span class="logo-wrestling">WRESTLING</span>
-        <span class="logo-club">CLUB</span>
+        <span class="logo-tiger">TWC</span>
       </a>
       <button class="nav-toggle" id="navToggle" aria-label="Toggle menu">
         <span></span><span></span><span></span>
@@ -41,12 +39,12 @@
       <div class="hero-pattern"></div>
     </div>
     <div class="hero-content">
-      <p class="hero-eyebrow">North Allegheny &bull; Wexford, PA</p>
+      <p class="hero-eyebrow">Wexford, PA</p>
       <h1 class="hero-headline">
         <span class="hero-line1">FORGED</span>
         <span class="hero-line2">ON THE <em>MAT.</em></span>
       </h1>
-      <p class="hero-sub">Youth folkstyle wrestling for boys and girls. Compete. Train. Grow.</p>
+      <p class="hero-sub">Premier Freestyle & Greco Training in Western Pennsylvania</p>
       <div class="hero-actions">
         <a href="#signup" class="btn btn-primary">Join the Club</a>
         <a href="#schedule" class="btn btn-outline">View Schedule</a>
