--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </div>
     <div class="hero-content">
       <p class="hero-eyebrow">Wexford, PA</p>
+      <img src="/assets/images/twc_logo.png" alt="TWC Logo" height="300">
       <h1 class="hero-headline">
         <span class="hero-line1">FORGED</span>
         <span class="hero-line2">ON THE <em>MAT.</em></span>
