--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             </div>
             <div>
               <strong>Email</strong>
-              <a href="mailto:info@tigerwrestlingclub.org">info@tigerwrestlingclub.org</a>
+              <a href="mailto:tigerwrestlingclubpa@gmail.com">tigerwrestlingclubpa@gmail.com</a>
             </div>
           </div>
           <div class="contact-item">
@@ -369,7 +369,7 @@
           <span class="logo-tiger">TIGER</span>
           <span class="logo-wrestling">WRESTLING</span>
           <span class="logo-club">CLUB</span>
-          <p>Youth folkstyle wrestling in Wexford, PA.<br>Affiliated with North Allegheny Senior High School.</p>
+          <p>Premier Freestyle & Greco Training<br>in Western Pennsylvania</p>
         </div>
         <div class="footer-links">
           <a href="#about">About</a>
@@ -379,19 +379,19 @@
           <a href="#contact">Contact</a>
         </div>
         <div class="footer-social">
-          <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Instagram">
+          <a href="https://www.instagram.com/tigerwrestlingclub" target="_blank" rel="noopener" aria-label="Instagram">
             <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
           </a>
-          <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Facebook">
+          <a href="https://www.facebook.com/profile.php?id=100091338498352" target="_blank" rel="noopener" aria-label="Facebook">
             <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>
           </a>
-          <a href="mailto:info@tigerwrestlingclub.org" aria-label="Email">
+          <a href="mailto:tigerwrestlingclubpa@gmail.com" aria-label="Email">
             <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
           </a>
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2025 Tiger Wrestling Club. All rights reserved.</p>
+        <p>&copy; 2025 TWC. All rights reserved.</p>
         <a href="https://www.tigerwrestlingclub.org" class="footer-url">tigerwrestlingclub.org</a>
       </div>
     </div>
