Add title field to practice schedule slots

--- a/admin/index.html
+++ b/admin/index.html
@@ -92,6 +92,10 @@
             </div>
             <form id="slotForm">
               <input type="hidden" id="slotId" />
+              <div class="field">
+                <label for="slotTitle">Practice Title</label>
+                <input type="text" id="slotTitle" placeholder="e.g. Freestyle Open Mat, Greco Technique, Competition Prep" />
+              </div>
               <div class="field-row">
                 <div class="field">
                   <label for="slotDay">Day</label>
