--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <div class="container">
       <div class="section-label">Get on the Mat</div>
       <h2 class="section-title">Practice Schedule</h2>
-      <p class="section-sub">All practices held at <strong>North Allegheny Senior High School</strong>. USA Wrestling membership required.</p>
+      <p class="section-sub">All practices held at <strong>North Allegheny Senior High School</strong>.<br>USA Wrestling membership required.</p>
       <div class="schedule-grid" id="scheduleGrid">
         <!-- Default slots shown until Firebase loads -->
         <div class="schedule-card">
