Add sponsors CMS — manage sponsors from admin panel

--- a/index.html
+++ b/index.html
@@ -281,11 +281,11 @@
       <div class="section-label">Our Supporters</div>
       <h2 class="section-title">2024–2025 Sponsors</h2>
       <p class="section-sub">These businesses make Tiger Wrestling Club possible. Thank you for your support.</p>
-      <div class="sponsors-grid">
+      <div class="sponsors-grid" id="sponsorsGrid">
+        <!-- Populated by Firebase; fallback shown if not configured -->
         <div class="sponsor-card">
           <div class="sponsor-logo-placeholder">True Believer<br>Jiu Jitsu</div>
         </div>
-        <!-- Additional sponsor slots -->
         <div class="sponsor-card sponsor-card--open">
           <div class="sponsor-open-text">Your Business<br>Here</div>
         </div>
