--- a/admin/index.html
+++ b/admin/index.html
@@ -56,6 +56,10 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="8" r="6"></circle><path d="M15.477 12.89L17 22l-5-3-5 3 1.523-9.11"></path></svg>
           Competitions
         </button>
+        <button class="nav-item" data-tab="sponsors">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"></rect><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path></svg>
+          Sponsors
+        </button>
         <button class="nav-item" data-tab="flyers">
           <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect><circle cx="8.5" cy="8.5" r="1.5"></circle><polyline points="21 15 16 10 5 21"></polyline></svg>
           Flyers
@@ -251,6 +255,53 @@
               <div class="modal-actions">
                 <button type="button" class="btn-ghost" id="compCancelBtn">Cancel</button>
                 <button type="submit" class="btn-primary" id="compSaveBtn">Save Event</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
+
+      <!-- ===== SPONSORS TAB ===== -->
+      <section class="tab-panel" id="tab-sponsors">
+        <div class="panel-header">
+          <h2>Sponsors</h2>
+          <button class="btn-primary btn-sm" id="addSponsorBtn">+ Add Sponsor</button>
+        </div>
+        <p class="panel-desc">Sponsors appear on the website in the order you set. Add a logo URL and website link to make cards clickable.</p>
+        <div class="schedule-list" id="sponsorList">
+          <div class="loading-state">Loading sponsors&hellip;</div>
+        </div>
+
+        <!-- Sponsor modal -->
+        <div class="modal-overlay" id="sponsorModal" style="display:none;">
+          <div class="modal">
+            <div class="modal-header">
+              <h3 id="sponsorModalTitle">Add Sponsor</h3>
+              <button class="modal-close" id="sponsorModalClose">&times;</button>
+            </div>
+            <form id="sponsorForm">
+              <input type="hidden" id="sponsorDocId" />
+              <div class="field">
+                <label for="sponsorName">Business Name</label>
+                <input type="text" id="sponsorName" placeholder="e.g. True Believer Jiu Jitsu" required />
+              </div>
+              <div class="field">
+                <label for="sponsorLogoUrl">Logo URL (optional)</label>
+                <input type="url" id="sponsorLogoUrl" placeholder="https://i.imgur.com/example.png" />
+                <small class="field-hint">Upload logo to <a href="https://imgur.com/upload" target="_blank" rel="noopener">Imgur</a> and paste the direct image link. Leave blank to show the business name as text.</small>
+                <img id="sponsorLogoPreview" class="url-preview" style="display:none;" alt="Logo preview" />
+              </div>
+              <div class="field">
+                <label for="sponsorWebsite">Website URL (optional)</label>
+                <input type="url" id="sponsorWebsite" placeholder="https://www.example.com" />
+              </div>
+              <div class="field">
+                <label for="sponsorOrder">Display Order</label>
+                <input type="number" id="sponsorOrder" value="1" min="1" max="99" />
+              </div>
+              <div class="modal-actions">
+                <button type="button" class="btn-ghost" id="sponsorCancelBtn">Cancel</button>
+                <button type="submit" class="btn-primary" id="sponsorSaveBtn">Save Sponsor</button>
               </div>
             </form>
           </div>
