Add Travel tag to competition events

--- a/admin/index.html
+++ b/admin/index.html
@@ -248,6 +248,12 @@
               </div>
               <div class="field checkbox-field">
                 <label>
+                  <input type="checkbox" id="compTravel" />
+                  Mark as "Travel" event (premier / away event)
+                </label>
+              </div>
+              <div class="field checkbox-field">
+                <label>
                   <input type="checkbox" id="compPublished" checked />
                   Show on website
                 </label>
