--- a/index.html
+++ b/index.html
@@ -303,6 +303,24 @@
     </div>
   </section>
 
+  <!-- ===== AFFILIATIONS ===== -->
+  <section class="section affiliations" id="affiliations">
+    <div class="container">
+      <div class="section-label">Our Partners</div>
+      <h2 class="section-title">Affiliations</h2>
+      <p class="section-sub">Organizations and programs we are proud to be affiliated with.</p>
+      <div class="affiliations-grid" id="affiliationsGrid">
+        <!-- Populated by Firebase -->
+        <div class="sponsor-card sponsor-card--open">
+          <div class="sponsor-open-text">Affiliation<br>Coming Soon</div>
+        </div>
+        <div class="sponsor-card sponsor-card--open">
+          <div class="sponsor-open-text">Affiliation<br>Coming Soon</div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- ===== CONTACT ===== -->
   <section class="section contact" id="contact">
     <div class="container">
