--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <div class="step-num">02</div>
             <div class="step-content">
               <strong>Fill Out the Form</strong>
-              <p>Complete the registration form with your athlete's info and contact details.</p>
+              <p>Submit an inquiry with your athlete's info and we'll walk you through the next steps.</p>
             </div>
           </div>
           <div class="step">
@@ -227,7 +227,7 @@
           </div>
         </div>
         <div class="signup-form-wrap">
-          <h3>Sign Up Now</h3>
+          <h3>Inquire Now</h3>
           <form class="signup-form" id="signupForm">
             <div class="form-group">
               <label for="parentName">Parent / Guardian Name</label>
@@ -265,10 +265,10 @@
             </div>
             <div class="form-group">
               <label for="message">Questions or Comments</label>
-              <textarea id="message" name="message" placeholder="Anything else we should know?" rows="3"></textarea>
+              <textarea id="message" name="message" placeholder="What questions do you have about the club?" rows="3"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary btn-full">Submit Registration</button>
-            <p class="form-note">We'll reach out within 24–48 hours to confirm your spot.</p>
+            <button type="submit" class="btn btn-primary btn-full">Submit Inquiry</button>
+            <p class="form-note">We'll reach out within 24–48 hours with everything you need to get started.</p>
           </form>
         </div>
       </div>
