--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="#signup">Sign Up</a>
         <a href="#sponsors">Sponsors</a>
         <a href="#contact">Contact</a>
-        <a href="#signup" class="nav-cta">Join Now</a>
+        <a href="#signup" class="nav-cta">Inquire Now</a>
       </nav>
     </div>
   </header>
