--- a/index.html
+++ b/index.html
@@ -407,9 +407,7 @@
     <div class="container">
       <div class="footer-top">
         <div class="footer-brand">
-          <span class="logo-tiger">TIGER</span>
-          <span class="logo-wrestling">WRESTLING</span>
-          <span class="logo-club">CLUB</span>
+          <span class="logo-tiger">TWC</span>
           <p>Premier Freestyle & Greco Training<br>in Western Pennsylvania</p>
         </div>
         <div class="footer-links">
